# alphafold3

./: environment.yaml  pred-test.ipynb  pyproject.toml
data/inputs/: AziU2_AziU3_6OI.json
data/notebooks/: pred-a100-40gb.ipynb
