[build-system]
requires = [
    "scikit_build_core",
    "pybind11",
    "cmake>=3.28",
    "ninja",
    "numpy",
]
build-backend = "scikit_build_core.build"

[project]
name = "alphafold3"
version = "3.0.0"
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "absl-py",
    "chex",
    "dm-haiku==0.0.13",
    "dm-tree",
    "jax==0.4.34",
    "jax[cuda12]==0.4.34",
    "jax-triton==0.2.0",
    "jaxtyping",
    "numpy",
    "triton==3.1.0",
    "tqdm",
    "zstandard", "pytest>=8.3.3,<9",
]

[project.optional-dependencies]
test = ["pytest>=6.0"]

[tool.scikit-build]
wheel.exclude = [
    "**.pyx",
    "**/CMakeLists.txt",
    "**.cc",
    "**.h"
]
sdist.include = [
    "LICENSE",
    "OUTPUT_TERMS_OF_USE.md",
    "WEIGHTS_PROHIBITED_USE_POLICY.md",
    "WEIGHTS_TERMS_OF_USE.md",
]

[tool.cibuildwheel]
build = "cp3*-manylinux_x86_64"
manylinux-x86_64-image = "manylinux_2_28"

[project.scripts]
build_data = "alphafold3.build_data:build_data"

[tool.pixi.project]
channels = ["conda-forge", "bioconda", "nvidia"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
alphafold3 = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.tasks]
build-data = "build_data"

[tool.pixi.tasks.pred-a100-40gb]
cmd = [
    "python",
    "run_alphafold.py",
    "--run_data_pipeline=true",
    "--run_inference=true"
]
env = { XLA_FLAGS = "--xla_gpu_enable_triton_gemm=false", XLA_PYTHON_CLIENT_PREALLOCATE = "true", XLA_CLIENT_MEM_FRACTION = "0.95" }

[tool.pixi.tasks.pred-a100-80gb]
cmd = [
    "python",
    "run_alphafold.py",
    "--run_data_pipeline=true",
    "--run_inference=true"
]
env = { XLA_FLAGS = "--xla_gpu_enable_triton_gemm=false", XLA_PYTHON_CLIENT_PREALLOCATE = "true", XLA_CLIENT_MEM_FRACTION = "0.95" }

[tool.pixi.tasks.pred-v100-32gb]
cmd = [
    "python",
    "run_alphafold.py",
    "--run_data_pipeline=true",
    "--run_inference=true",
    "--flash_attention_implementation=xla"
]
env = { XLA_FLAGS = "--xla_gpu_enable_triton_gemm=false", XLA_PYTHON_CLIENT_PREALLOCATE = "true", XLA_CLIENT_MEM_FRACTION = "0.95" }

[tool.pixi.dependencies]
hmmer = "==3.4"
git = ">=2.47.0,<3"
wget = ">=1.21.4,<2"
pip = ">=24.3.1,<25"
curl = ">=8.10.1,<9"
zstd = ">=1.5.6,<2"
cmake = ">=3.30.5,<4"
cuda = "==12.6"
cuda-toolkit = "==12.6"
python = "==3.11"
rdkit = "2024.3.5"
scikit-build-core = ">=0.10.7,<0.11"
pybind11 = ">=2.13.6,<3"
ninja = ">=1.12.1,<2"
gcc = ">=13.3.0,<13.4"
